xdy/grammar/xdy.ebnf
<function> ::= <parameters>? <expression>

<parameters> ::= <parameter> ("," <parameter>)* ":"

<parameter> ::= <name>

<name> ::= "{" <WHITESPACE>* <IDENTIFIER> <WHITESPACE>* "}"

<expression> ::= <add_sub>

<add_sub> ::= <mul_div_mod> <add_sub_op>*

<add_sub_op> ::= "+" <mul_div_mod> | "-" <mul_div_mod>

<mul_div_mod> ::= <unary> <mul_div_mod_op>*

<mul_div_mod_op> ::= "*" <unary> | "×" <unary> | "/" <unary> | "÷" <unary> | "%" <unary>

<unary> ::= "-" <unary> | <exponent>

<exponent> ::= <primary> <exponent_tail>?

<exponent_tail> ::= "^" <unary>

<primary> ::= <range> | <dice> | <group> | <variable> | <binding> | <CONSTANT>

<group> ::= "(" <expression> ")"

<variable> ::= <name>

<binding> ::= <name> "@" "(" <expression> ")"

<range> ::= "[" <expression> ":" <expression> "]"

<dice> ::= <base_dice> <drop_clause>*

<base_dice> ::= <dice_count> <D_OPERATOR> <standard_faces> | <dice_count> <D_OPERATOR> <custom_faces>

<dice_count> ::= <CONSTANT> | <variable> | <binding> | <group>

<standard_faces> ::= <INTEGER> | <variable> | <binding> | <group>

<custom_faces> ::= "[" <INTEGER> ("," <INTEGER>)* "]"

<drop_clause> ::= "drop" "lowest" <drop_expression>? | "drop" "highest" <drop_expression>?

<drop_expression> ::= <CONSTANT> | <variable> | <binding> | <group>

<IDENTIFIER> ::= <NAME_CHAR> (<NAME_CHAR> | <WHITESPACE>+ <NAME_CHAR>)*

<NAME_CHAR> ::= "any identifier character (is_identifier_char) except whitespace"

<WHITESPACE> ::= "any whitespace, e.g., space, tab, line feed, or no-break space"

<CONSTANT> ::= <DIGIT>+

<INTEGER> ::= "-"? <DIGIT>+

<DIGIT> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<D_OPERATOR> ::= "d" | "D"
